--- a/src/app/layouts/researcher/researcher.component.html
+++ b/src/app/layouts/researcher/researcher.component.html
@@ -1,63 +1,116 @@
+
+    <script>
+      const data = {
+        labels: ['Normal', 'Cancer'],
+        datasets: [{
+          label: 'Data Distribution',
+          data: [49, 51],
+          backgroundColor: ['#4B8BF5', '#FF6F61'],
+          borderColor: ['#ffffff', '#ffffff'],
+          borderWidth: 1
+        }]
+      };
+
+      const config = {
+        type: 'pie',
+        data: data,
+        options: {
+          responsive: true,
+          plugins: {
+            legend: {
+              position: 'top',
+            },
+            tooltip: {
+              callbacks: {
+                label: function(tooltipItem) {
+                  const label = tooltipItem.label || '';
+                  const value = tooltipItem.raw || 0;
+                  return `${label}: ${value}%`;
+
+                }
+              }
+            }
+          }
+        }
+      };
+
+      const ctx = document.getElementById('myPieChart').getContext('2d');
+      new Chart(ctx, config);
+    </script>
 <div class="min-h-screen bg-gray-50/50">
-    <app-sidebar></app-sidebar>
+  <app-sidebar></app-sidebar>
     <div class="p-4 xl:ml-80">    
       <div class="mt-12">
         <div class="mb-12 grid gap-y-10 gap-x-6 md:grid-cols-2 xl:grid-cols-4">
           <div class="col-span-full relative flex flex-col bg-clip-border rounded-xl bg-white text-gray-700 shadow-md">
             <div class="text-left">
-              <h4 class="block antialiased tracking-normal font-sans text-2xl font-semibold leading-snug text-blue-gray-900">Welcome on Microscan</h4>
-              <br>            
+              <h2 class="block antialiased tracking-normal font-sans text-2xl font-semibold leading-snug text-blue-gray-900">Welcome on Microscan!</h2>
+              <br>
+    
             </div>
             <div class="border-t border-blue-gray-50 p-4">
+              <h4 class="block antialiased tracking-normal font-sans text-2xl font-semibold leading-snug text-blue-gray-900">Subscription:</h4>
               <p class="block antialiased font-sans text-base leading-relaxed font-normal text-blue-gray-600">
-                <strong class="text-green-500">+55%</strong>&nbsp;than last week
+                <strong class="text-green-500">Diamand plan</strong>&nbsp;Until 12-11-2024
+                <button class="px-4 py-2 text-[#5A6ACF] hover:text-white bg-[#FBFCFE] rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">Change the plan</button>
               </p>
             </div>
           </div>
         </div>
         
-        <div class="mb-4 grid grid-cols-1 gap-6 xl:grid-cols-3">
-          <div class="relative flex flex-col bg-clip-border rounded-xl bg-white text-gray-700 shadow-md overflow-hidden xl:col-span-2">
-            <div class="relative bg-clip-border rounded-xl overflow-hidden bg-transparent text-gray-700 shadow-none m-0 flex items-center justify-between p-6">
-              <div>
-                <h6 class="block antialiased tracking-normal font-sans uppercase text-base font-semibold leading-relaxed text-blue-gray-900 mb-1 font-bold">Data available</h6>
-                <p class="antialiased font-sans text-sm leading-normal flex items-center gap-1 font-normal text-blue-gray-600">
-                  Here is the list of data available for you to request.
-                </p>
+        <div class="mb-4 grid grid-cols-1 xl:grid-cols-2">
+          <div class="relative flex gap-6 bg-clip-border rounded-xl bg-white text-gray-700 shadow-md overflow-hidden xl:col-span-2">
+            <div>
+              <div class="relative bg-clip-border rounded-xl overflow-hidden bg-transparent text-gray-700 shadow-none m-0 flex items-center justify-between p-6">
+                <div>
+                  <h6 class="block antialiased tracking-normal font-sans uppercase text-base font-semibold leading-relaxed text-blue-gray-900 mb-1 font-bold">Data available</h6>
+                  <p class="antialiased font-sans text-sm leading-normal flex items-center gap-1 font-normal text-blue-gray-600">
+                    Here is the list of data available for you to request.
+                  </p>
+                </div>
+              </div>
+              <div class="p-6 overflow-x-scroll px-0 pt-0 pb-2">
+                <table class="w-full min-w-[640px] table-auto">
+                  <tbody>
+                    <tr>
+                      <td class="py-3 px-5 border-b border-blue-gray-50">
+                        <div class="flex justify-between items-center gap-4">
+                          <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900text-[#5A6ACF]">Data for cancer</p>
+                          <button class="px-4 py-2 text-[#5A6ACF] hover:text-white bg-[#FBFCFE] rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400" (click)="toggleComponent()">Request</button>
+                        </div>
+                      </td>
+                    </tr>
+                    <tr>
+                      <td class="py-3 px-5 border-b border-blue-gray-50">
+                        <div class="flex justify-between items-center gap-4">
+                          <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900">Data for diabetes type 2</p>
+                          <button class="px-4 py-2 text-[#5A6ACF] hover:text-white bg-[#FBFCFE] rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">Request</button>
+                        </div>
+                      </td>
+              
+                    </tr>
+                    <tr>
+                      <td class="py-3 px-5 border-b border-blue-gray-50">
+                        <div class="flex justify-between items-center gap-4">
+                          <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900">Data for mental illness</p>
+                          <button class="px-4 py-2 text-[#5A6ACF] hover:text-white bg-[#FBFCFE] rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">Request</button>
+                        </div>
+                      </td>
+                    </tr>
+                  </tbody>
+                </table>
               </div>
             </div>
-            <div class="p-6 overflow-x-scroll px-0 pt-0 pb-2">
-              <table class="w-full min-w-[640px] table-auto">
-                <tbody>
-                  <tr>
-                    <td class="py-3 px-5 border-b border-blue-gray-50">
-                      <div class="flex items-center gap-4">
-                        <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900">Data for cancer</p>
-                      </div>
-                    </td>
-
-                  </tr>
-                  <tr>
-                    <td class="py-3 px-5 border-b border-blue-gray-50">
-                      <div class="flex items-center gap-4">
-                        <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900">Data for diabetes type 2</p>
-                      </div>
-                    </td>
-                    
-                  </tr>
-                  <tr>
-                    <td class="py-3 px-5 border-b border-blue-gray-50">
-                      <div class="flex items-center gap-4">
-                        <p class="block antialiased font-sans text-sm leading-normal text-blue-gray-900">Data for mental illness</p>
-                        <button class="px-4 py-2 text-white bg-blue-500 rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400">Request</button>
-                      </div>
-                    </td>
-                  </tr>       
-                </tbody>
-              </table>
+            <div   [ngStyle]="{'width': '300px', 'object-fit': 'contain', 'display':showComponent?'block':'none'}">
+              <canvas id="myPieChart"></canvas>
+              <button class="px-4 py-2 text-[#5A6ACF] hover:text-white bg-[#FBFCFE] rounded hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-400" (click)="downloadCSV()">Download CSV</button>
+              
             </div>
+            
           </div>
+          
         </div>
       </div>
     </div>
   </div>
+  
